syntax = "proto3";

package wres.messages.generated;

message job_output
{
    string resource = 1;
}
