syntax = "proto3";

package wres.messages.generated;

message job_standard_stream
{
    int32 index = 1;
    string text = 2;
}
